# AppStoreTools

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  README.md  README.zh-CN.md  generate_placeholder_screenshots.py  install.sh  pyproject.toml  requirements.txt  run.sh  upload_to_appstore.py
.github/workflows/: publish.yml
config/: .env.example
data/: appstore_info.csv  iap_packages.json
docs/specs/: 2026-05-18-web-ui-ux-improvements-design.md
docs/tutorials/: 01-install-and-init.md  01-install-and-init.zh-CN.md  02-metadata-and-screenshots.md  02-metadata-and-screenshots.zh-CN.md  03-iap-and-subscriptions.md  03-iap-and-subscriptions.zh-CN.md  04-whats-new-and-urls.md  04-whats-new-and-urls.zh-CN.md  README.md  (+9 more)
tests/: conftest.py  test_api.py  test_app_config.py  test_app_import.py  test_build.py  test_build_inputs.py  test_cli_version.py  test_config_llm.py  test_constants.py  test_error_handler.py  test_guard.py  test_guard_cmd.py  test_guard_integration.py  test_iap_core.py  test_iap_dispatch.py  test_iap_review_screenshots.py  test_iap_review_screenshots_cli.py  test_init_cmd.py  test_install_cmd.py  test_llm.py  test_metadata.py  test_progress.py  test_project_dependencies.py  test_screenshots.py  test_subscriptions_core.py  test_subscriptions_validation.py  test_translator.py  test_update_cmd.py  test_utils.py  test_web_cmd.py  test_web_daemon.py  test_web_notifications.py  test_web_server.py  test_web_sse.py  test_web_tasks.py  test_web_webhook_settings.py  test_web_whats_new.py  test_whats_new.py  test_whats_new_e2e.py  test_whats_new_translate.py
(+75 files in other folders)
